<resources>
    <string name="app_name">Vaktin</string>
    <string name="login_button">Login</string>
    <string name="logo_img">logo.jpg</string>


    <string name="morgun">Morgunvakt</string>
    <string name="kvold">Kvöldvakt</string>
    <string name="naetur">Næturvakt</string>

    <!-- MENU -->
    <string name="main">Forsíða</string>
    <string name="edit">Breyta</string>
    <string name="logout">Skrá út</string>
    <string name="logo">Logo</string>
    <string name="workstations">Vinnustöðvar</string>

    <string name="comment">Birna er veik í dag</string>
    <string name="tilbaka_button">Til baka</string>
    <string name="vista_button">Vista</string>
    <string name="Athugasemd">Athugasemd</string>

    <!-- EDIT SÍÐA -->
    <string name="commentSite">Veldu aðgerð</string>
    <string name="add_employee">Bæta við starfsmanni</string>
    <string name="add_comment">Bæta við athugasemd</string>
    <string name="set_footer">Velja síðufót</string>
    <string name="add_workstation">Bæta við vinnustöð</string>
    <string name="workstation_hint">Vinnustöð</string>

    <!-- LOGIN SÍÐA -->
    <string name="username_hint">Notandi</string>
    <string name="password_hint">Lykilorð</string>

    <!-- WORKSTATION SÍÐA -->
    <string name="workstations_header">Veldu vinnustöð til að bæta starfólki við</string>


    <!-- FOOTER SÍÐA -->
    <string name="vista">Vista</string>
    <string name="stada">Staða</string>
    <string name="nafn">Nafn</string>
    <string name="simanumer">Símanúmer</string>

    <!-- BÆTA VIÐ STARFSMANNI SÍÐA -->
    <string name="workstation_button">Velja Vinnustöð</string>
    <string name="eName">Starfsmaður</string>
    <string name="eFrom">8:00</string>
    <string name="eTo">16:00</string>
    <string name="eType">Staða</string>
    <string name="eTextOnSite">Sláið inn starfsmann</string>

    <string name="w_text">Bættu við vinnustöð</string>
    <string name="workstName">Vinnustöð</string>
    <string name="Vaktsjóri">Vaktstjóri</string>
    <string name="Deildarlæknir">Deildarlæknir</string>
    <string name="delete_button">Já</string>
    <string name="no_button">Nei</string>

    <!-- WORKSTATION LISTI -->
    <string name="del_station">Eyða stöð</string>

    <!-- REMOVE EMPLOYEE ACTIVITY -->
    <string name="remove_employee_activity_header">Veldu starfsmann til að eyða</string>
    <string name="remove_employee_button">Ertu viss um að þú viljir eyða starfsmanni?</string>

    <!-- POPUP SÍÐA -->
    <string name="eyda_sp">Viltu eyða athugasemdinni?</string>
    <string name="eyda_sp_ws">Viltu eyða vinnustöð?</string>

</resources>
