<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <item
        android:id="@+id/logo"
        android:icon="@mipmap/ic_logo"
        android:title="@string/logo"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/edit"
        android:title="@string/edit"
        app:showAsAction="never"/>

    <item android:id="@+id/workstations"
        android:title="@string/workstations"
        app:showAsAction="never"/>

    <item
        android:id="@+id/remove_employee_activity"
        android:title="Starfsmenn"
        app:showAsAction="never" />

    <item android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never"/>



</menu>