<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLight"
    tools:context=".EditActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/simpleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:text="@string/commentSite"
            android:textSize="20sp"
            android:textColor="#000000"/>

        <Button
            android:id="@+id/workstation_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_button"
            android:text="@string/add_workstation"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/employee_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_button"
            android:text="@string/add_employee"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/comment_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_button"
            android:text="@string/add_comment"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/footer_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_button"
            android:text="@string/set_footer"
            android:textSize="15sp"/>

    </LinearLayout>

</LinearLayout>