<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/vaktinColor"

        android:orientation="vertical">


        <ImageView
            android:layout_width="339dp"
            android:layout_height="236dp"
            android:layout_margin="60dp"
            android:contentDescription="@string/logo_img"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/uName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:importantForAutofill="no"
            android:paddingLeft="10dp"
            android:textSize="20dp"/>


        <EditText
            android:id="@+id/password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textSize="20dp"
            />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:text="@string/login_button"
            android:layout_margin="20dp"

            />

    </LinearLayout>

</LinearLayout>