<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLight"
    tools:context=".EmployeeActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >


        <TextView
            android:id="@+id/simpleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp"
            android:text="@string/eTextOnSite"
            android:textSize="30dp" />


        <EditText
            android:id="@+id/eName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/eName"
            android:background="@drawable/rounded_edittext"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/eType"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/eType"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="20dp"/>


        <EditText
            android:id="@+id/eFrom"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/eFrom"
            android:layout_gravity="start"
            android:layout_marginStart="30dp"
            android:inputType="time"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginLeft="30dp"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/eTo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/eTo"
            android:layout_gravity="start"
            android:layout_marginStart="30dp"
            android:inputType="time"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="20dp"/>


        <Button
            android:id="@+id/vista_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/vista_button"
            android:background="@drawable/rounded_button"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="15sp"
            />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>