<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vaktinColor"
    tools:context=".FooterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">




        <EditText
            android:id="@+id/comment"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:background="#FFFFFF"
            android:text="@string/stada"/>



        <EditText
            android:id="@+id/comment"
            android:layout_position="right"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:background="#FFFFFF"
            android:text="@string/nafn" />

        <EditText
            android:id="@+id/comment"
            android:layout_width="100"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:background="#FFFFFF"
            android:text="@string/simanumer"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"
            android:text="Hér þarf að hanna Footer síðuna"
            android:textAllCaps="true"/>
        <EditText
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:background="#FFFFFF" />

        <EditText
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:background="#FFFFFF" />

        <EditText
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:background="#FFFFFF" />


        <Button
            android:id="@+id/tilbaka_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vista_button" />

    </LinearLayout>

</LinearLayout>